--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^16.18.69",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "leaflet": "^1.9.4",
+    "leaflet-css": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "sass": "^1.69.7"
   }
 }
